--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,6 @@
     "cors": "2.8.5",
     "express": "5.1.0",
     "morgan": "1.10.0",
-    "node-html-parser": "^7.0.1"
+    "node-html-parser": "7.0.1"
   }
 }
